syntax = "proto2";

package apollo.planning;

message PiecewiseJerkSpeedConfig {
  optional double s_weight = 1 [default = 1.0];
  optional double velocity_weight = 2 [default = 10.0];
  optional double acc_weight = 3 [default = 10.0];
  optional double jerk_weight = 4 [default = 100.0];
  optional double ref_weight = 5 [default = 100.0];
  optional double kappa_penalty_weight = 6 [default = 1000.0];
}
